# RenderEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakelists.txt  README.md  README.txt  RenderEngine.files  RenderEngine.includes  RenderEngine.srctrldb  RenderEngine.srctrlprj  build.bat  build.sh  main.cpp
___old/: WindowManager.cpp_old  appmain.cpp
docs/: ClassDiagrams.mdj
engine/: CMakeLists.txt
engine/include/: Application.h  Engine.h  LinearMath.h  OSExport.h  typedefs.h
engine/include/assets/: Asset.h  Material.h  Mesh.h  Resources.h  Shader.h  Texture.h
engine/include/components/: Camera.h  Component.h  Light.h  MeshRenderer.h  NullComponent.h  Renderer.h
engine/include/device/: DisplayDevice.h  Input.h  WindowsDevice.h
engine/include/graphics/: Buffer.h  BufferFormat.h  ElementFormat.h  FormatType.h  GraphicLibrary.h  GraphicLibrarySingleton.h  Object.h  OpenGLRenderer.h  PixelColor.h  RayTracer.h  RayTracerAttributes.h  Rect.h  ShaderProgram.h  TextureFormat.h  Vertex.h  VertexFormat.h
engine/include/loaders/: AssimpMeshLoader.h  MeshLoader.h  SoilTextureLoader.h  TextureLoader.h
engine/include/scene/: Actor.h  EmptyScene.h  Scene.h  Transform.h
engine/include/utils/: FileUtils.h  MeshUtils.h
engine/src/: Application.cpp  Engine.cpp
engine/src/assets/: Material.cpp  Mesh.cpp  Resources.cpp  Texture.cpp
engine/src/components/: Camera.cpp  Component.cpp  MeshRenderer.cpp
engine/src/device/: Input.cpp  WindowsDevice.cpp
engine/src/graphics/: Buffer.cpp  FormatType.cpp  GraphicLibrarySingleton.cpp  Object.cpp  RayTracer.cpp  ShaderProgram.cpp
engine/src/loaders/: AssimpMeshLoader.cpp  SoilTextureLoader.cpp
engine/src/scene/: Actor.cpp  EmptyScene.cpp  Scene.cpp  Transform.cpp
engine/src/utils/: FileUtils.cpp
fontconfig/: 04aabc0a78ac019cf9454389977116d2-le64.cache-3  0bd3dc0958fa2205aaaa8ebb13e2872b-le64.cache-3  0c9eb80ebd1c36541ebe2852d3bb0c49-le64.cache-3  16c2fda60d1b4b719f4b3d06fd951d25-le64.cache-3  188ac73a183f12857f63bb60a4a6d603-le64.cache-3  1ac9eb803944fde146138c791f5cc56a-le64.cache-3  22368d551a680bfe5a62c02760edf4ea-le64.cache-3  2cd17615ca594fa2959ae173292e504c-le64.cache-3  3047814df9a2f067bd2d96a2b9c36e5a-le64.cache-3  32b6488e5b8292a2e95c79d947e009e8-le64.cache-3  3830d5c3ddfd5cd38a049b759396e72e-le64.cache-3  385c0604a188198f04d133e54aba7fe7-le64.cache-3  4794a0821666d79190d59a36cb4f44b5-le64.cache-3  49f0de54bdd920fe4f0dfd4cbac43e6b-le64.cache-3  4b2eda6bb976bda485cb2176619421d5-le64.cache-3  4d9c95eba1cb85bbcf2878543262124a-le64.cache-3  550f3886151c940c12a5ed35f6a00586-le64.cache-3  551ecf3b0e8b0bca0f25c0944f561853-le64.cache-3  564b2e68ac9bc4e36a6f7f6d6125ec1c-le64.cache-3  56cf4f4769d0f4abc89a4895d7bd3ae1-le64.cache-3  573ec803664ed168555e0e8b6d0f0c7f-le64.cache-3  57e423e26b20ab21d0f2f29c145174c3-le64.cache-3  660208299946a285a940457d1287da33-le64.cache-3  674d1711f2d1d2a09646eb0bdcadee49-le64.cache-3  6b2c5944714ca7831b25bed9e85cb5c8-le64.cache-3  767a8244fc0220cfb567a839d0392e0b-le64.cache-3  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-3  8801497958630a81b71ace7c5f9b32a8-le64.cache-3  945677eb7aeaf62f1d50efc3fb3ec7d8-le64.cache-3  95530828ff6c81d309f8258d8d02a23e-le64.cache-3  9b89f8e3dae116d678bbf48e5f21f69b-le64.cache-3  a015930274ffcd967d2ca1b57da47cc7-le64.cache-3  a48eab177a16e4f3713381162db2f3e9-le64.cache-3  b47c4e1ecd0709278f4910c18777a504-le64.cache-3  b872e6e592da6075ffa4ab0a1fcc0c75-le64.cache-3  cabbd14511b9e8a55e92af97fb3a0461-le64.cache-3  d3e5c4ee2ceb1fc347f91d4cefc53bc0-le64.cache-3  d52a8644073d54c13679302ca1180695-le64.cache-3  d589a48862398ed80a3d6066f4f56f4c-le64.cache-3  d82eb4fd963d448e2fcb7d7b793b5df3-le64.cache-3  (+5 more)
include/: Application.h  Camera.h  FileUtils.h  GL.h  Input.h  RenderManager.h  Renderer.h  Scene.h  SceneObject.h  SpriteVertex.h  Transform.h  WindowManager.h  main.h  renderer_local_includes.h
include/Assets/: Asset.h  Material.h  Mesh.h  Shader.h  Sprite.h  Texture.h
include/Components/: Component.h  Renderer.h  SpriteMeshRenderer.h
include/Maths/: Matrix3.h  Matrix4.h  Rect.h  Vector3.h  Vector4.h  linearmath_local_definitions.h
include/Maths/include/: Matrix.h  Quaternion.h  Vector3.h  Vector4.h
old/: WindowManager.h_old
resources/Shaders/: SimpleSprite.frag  SimpleSprite.vert
resources/test/Materials/: Default_SpriteMaterial.mat
src/: Application.cpp  Camera.cpp  FileUtils.cpp  GLerror.cpp  Input.cpp  RenderManager.cpp  Scene.cpp  SceneObject.cpp  Transform.cpp  WindowManager.cpp  appmain.cpp  main.cpp
src/Assets/: Material.cpp  Shader.cpp  Sprite.cpp  Texture.cpp
src/Components/: SpriteMeshRenderer.cpp
test/: Basic.shader  CMakeLists.txt  TestScene.h  armchair.3ds  main.cpp  vase3.3ds
